# RTTI

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Config.hpp  DataState.hpp  DataState.inl  Fundamental.hpp  Hashing.hpp  MetaData.hpp  MetaData.inl  MetaTrait.hpp  MetaTrait.inl  MetaVerb.hpp  MetaVerb.inl  NameOf.hpp  README.md  RTTI.cpp  RTTI.hpp  Reflection.hpp  Reflection.inl
.github/workflows/: ci.yml  dispatch.yml
include/: Langulus.RTTI.hpp  LangulusRTTI.hpp
include/RTTI/: Assume.hpp  Hash.hpp  Meta.hpp  MetaData.hpp  MetaTrait.hpp  MetaVerb.hpp  Reflect.hpp
source/: Arithmetic.hpp  Assumptions.hpp  Byte.hpp  Config.hpp  DataState.hpp  DataState.inl  Fundamental.hpp  Hashing.hpp  Intent.hpp  Meta.hpp  Meta.inl  MetaConst.hpp  MetaConst.inl  MetaData.hpp  MetaData.inl  MetaTrait.hpp  MetaTrait.inl  MetaVerb.hpp  MetaVerb.inl  NameOf.hpp  Numbers.hpp  RTTI.cpp  RTTI.hpp  Referenced.hpp  Reflection.hpp  Reflection.inl  Semantics.hpp  Tag.hpp  Utilities.hpp
test/: CMakeLists.txt  Common.hpp  Main.cpp  Main.hpp  TestCTTI.cpp  TestConcepts.cpp  TestConverters.cpp  TestCoreConcepts.cpp  TestHashing.cpp  TestIntents.cpp  TestNameOf.cpp  TestRTTI.cpp  TestRTTIConcepts.cpp  TestReflection.cpp  TestSemantics.cpp  TestSimilarity.cpp  TestTypes.hpp
